--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@azure/openai": "1.0.0-beta.4",
     "@element-plus/icons-vue": "^2.3.1",
     "@google/generative-ai": "^0.21.0",
+    "ant-design-vue": "^4.2.6",
     "axios": "^1.6.2",
     "core-js": "^3.37.1",
     "dexie": "^3.2.4",
