--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "prettier": "^3.3.2",
     "stylus": "^0.61.0",
     "stylus-loader": "^7.1.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.2.2"
   },
   "commitlint": {
